quick alignment fix

--- a/src/Components/Pyramid/Pyramid.css
+++ b/src/Components/Pyramid/Pyramid.css
@@ -11,7 +11,8 @@ h1.centered {
 }
 
 .pyramid {
-  width: 90%;
+  width: 100%;
+  margin-left: -30px;
 }
 
 .legend {
